added support for standalone servers as well as velocity proxies