@@ -4,20 +4,21 @@ import com.example.reportsystem.ReportSystem;
 import com.example.reportsystem.config.PluginConfig;
 import com.example.reportsystem.model.Report;
 import com.example.reportsystem.model.ReportType;
+import com.example.reportsystem.platform.CommandActor;
+import com.example.reportsystem.platform.CommandContext;
+import com.example.reportsystem.platform.CommandHandler;
+import com.example.reportsystem.platform.PlatformPlayer;
 import com.example.reportsystem.service.ChatLogService;
 import com.example.reportsystem.service.ReportManager;
 import com.example.reportsystem.util.Text;
-import com.velocitypowered.api.command.CommandSource;
-import com.velocitypowered.api.command.SimpleCommand;
-import com.velocitypowered.api.proxy.Player;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
-import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
+import java.util.stream.Collectors;
 
 /**
  * /report command
@@ -34,7 +35,7 @@ import java.util.concurrent.ConcurrentMap;
  *         tip-expand:   "Click to expand"
  *   - Tab completion shows a "<reason...>" placeholder when you're at the reason position.
  */
-public class ReportCommand implements SimpleCommand {
+public class ReportCommand implements CommandHandler {
 
     private static final String REASON_PLACEHOLDER = "<reason...>";
 
@@ -56,11 +57,10 @@ public class ReportCommand implements SimpleCommand {
     }
 
     @Override
-    public void execute(Invocation inv) {
-        CommandSource src = inv.source();
-        String[] args = inv.arguments();
+    public void execute(CommandContext ctx) {
+        CommandActor src = ctx.actor();
+        String[] args = ctx.args();
 
-        // Expect at least: /report <type> <category> ...
         if (args.length < 2) {
             Text.msg(src, config.msg("usage-report", "Usage: /report <type> <category> [<target>] <reason...>"));
             return;
@@ -78,11 +78,10 @@ public class ReportCommand implements SimpleCommand {
         }
 
         boolean isPlayerType = rt.typeId.equalsIgnoreCase("player");
-        String reporter = (src instanceof Player p) ? p.getUsername() : "CONSOLE";
+        PlatformPlayer playerSource = src.asPlayer().orElse(null);
+        String reporter = playerSource != null ? playerSource.username() : "CONSOLE";
         String reported;
         String reason;
-
-        Player playerSource = (src instanceof Player p) ? p : null;
 
         if (playerSource != null && !enforceCooldown(playerSource)) {
             return;
@@ -96,18 +95,14 @@ public class ReportCommand implements SimpleCommand {
             reported = args[2];
             reason = String.join(" ", Arrays.copyOfRange(args, 3, args.length));
 
-            if (!config.allowSelfReport && src instanceof Player p && p.getUsername().equalsIgnoreCase(reported)) {
+            if (!config.allowSelfReport && playerSource != null && playerSource.username().equalsIgnoreCase(reported)) {
                 Text.msg(src, config.msg("self-report-denied", "You cannot report yourself."));
                 return;
             }
 
             // Optional: validate target online (non-fatal)
-            Optional<Player> t = plugin.proxy().getPlayer(reported);
-            if (t.isEmpty()) {
-                // still allow filing against offline names
-            }
+            plugin.platform().findPlayer(reported);
         } else {
-            // Non-player-type: everything after category is reason
             if (args.length < 3) {
                 Text.msg(src, config.msg("usage-report", "Usage: /report <type> <category> <reason...>"));
                 return;
@@ -116,19 +111,16 @@ public class ReportCommand implements SimpleCommand {
             reason = String.join(" ", Arrays.copyOfRange(args, 2, args.length));
         }
 
-        // File or stack
         Report r = mgr.fileOrStack(reporter, reported, rt, reason);
 
-        // Persist the source server for better "Jump" inference later
-        if (src instanceof Player p) {
-            String srcServer = p.getCurrentServer().map(s -> s.getServerInfo().getName()).orElse(null);
-            if (srcServer != null && !srcServer.isBlank()) {
-                mgr.updateSourceServer(r.id, srcServer);
-            }
-            lastReportAt.put(p.getUniqueId(), System.currentTimeMillis());
+        if (playerSource != null) {
+            playerSource.currentServerName()
+                    .filter(name -> !name.isBlank())
+                    .ifPresent(name -> mgr.updateSourceServer(r.id, name));
+            lastReportAt.put(playerSource.uniqueId(), System.currentTimeMillis());
         }
 
-        chat.refreshWatchList(); // ensure chat capture watches targets for subsequent messages
+        chat.refreshWatchList();
 
         if (r.count > 1) {
             Text.msg(src, config.msg("report-stacked", "Report stacked into #%id% (now x%count%)")
@@ -139,26 +131,23 @@ public class ReportCommand implements SimpleCommand {
                     .replace("%id%", String.valueOf(r.id)));
         }
 
-        // In-game notify to staff with permission
         String notifyPerm = (config.notifyPermission == null || config.notifyPermission.isBlank())
                 ? "reportsystem.notify" : config.notifyPermission;
 
-        // Configurable action label & tooltip, defaults match /reports style
-        String expandLabel = config.msg("label-expand", "Expand");        // e.g., set to "^" in config messages if desired
-        String expandTip   = config.msg("tip-expand", "Click to expand"); // hover tooltip
+        String expandLabel = config.msg("label-expand", "Expand");
+        String expandTip   = config.msg("tip-expand", "Click to expand");
 
         String summary = "<yellow>New report:</yellow> <white>#"+r.id+
                 "</white> <gray>("+r.typeDisplay+" / "+r.categoryDisplay+")</gray> " +
                 "<white>"+(isPlayerType ? r.reported : "—")+"</white> — <gray>"+Text.escape(reason)+
                 "</gray>  <gray>[</gray><aqua><hover:show_text:'"+Text.escape(expandTip)+"'><click:run_command:'/reports view "+r.id+"'>"+Text.escape(expandLabel)+"</click></hover></aqua><gray>]</gray>";
 
-        plugin.proxy().getAllPlayers().forEach(pl -> {
+        plugin.platform().onlinePlayers().forEach(pl -> {
             if (pl.hasPermission(notifyPerm)) {
                 Text.msg(pl, summary);
             }
         });
 
-        // Optional notifier (kept)
         try {
             Object n = plugin.notifier();
             if (n != null) {
@@ -167,14 +156,14 @@ public class ReportCommand implements SimpleCommand {
         } catch (Throwable ignored) {}
     }
 
-    private boolean enforceCooldown(Player player) {
+    private boolean enforceCooldown(PlatformPlayer player) {
         if (player.hasPermission(config.staffPermission)) return true;
 
         int cooldown = Math.max(0, config.reportCooldownSeconds);
         if (cooldown <= 0) return true;
 
         long now = System.currentTimeMillis();
-        long last = lastReportAt.getOrDefault(player.getUniqueId(), 0L);
+        long last = lastReportAt.getOrDefault(player.uniqueId(), 0L);
         long waitMillis = (last + cooldown * 1000L) - now;
         if (waitMillis <= 0) return true;
 
@@ -185,30 +174,25 @@ public class ReportCommand implements SimpleCommand {
     }
 
     @Override
-    public List<String> suggest(Invocation inv) {
-        String[] a = inv.arguments();
+    public List<String> suggest(CommandContext ctx) {
+        String[] a = ctx.args();
 
-        // /report <type>
         if (a.length == 0) return mgr.typeIds();
 
-        // /report <type> ...
         if (a.length == 1) return filter(mgr.typeIds(), a[0]);
 
-        // /report <type> <category> ...
         if (a.length == 2) return filter(mgr.categoryIdsFor(a[0]), a[1]);
 
-        // Player type: /report player <category> <target> <reason...>
         if (a[0].equalsIgnoreCase("player")) {
             if (a.length == 3) {
-                // suggest online names for <target>
-                var names = plugin.proxy().getAllPlayers().stream().map(Player::getUsername).toList();
+                List<String> names = plugin.platform().onlinePlayers().stream()
+                        .map(PlatformPlayer::username)
+                        .collect(Collectors.toList());
                 return filter(names, a[2]);
             }
-            // Next (a.length >= 4) -> reason placeholder
             return reasonPlaceholder(a.length >= 4 ? a[3] : "");
         }
 
-        // Non-player types: after <type> <category>, suggest <reason...>
         if (a.length >= 3) {
             return reasonPlaceholder(a[2]);
         }
@@ -216,19 +200,16 @@ public class ReportCommand implements SimpleCommand {
         return List.of();
     }
 
-    /* -------------------- helpers -------------------- */
-
     private static List<String> filter(List<String> options, String prefix) {
         String p = prefix.toLowerCase(Locale.ROOT);
         return options.stream().filter(s -> s.toLowerCase(Locale.ROOT).startsWith(p)).toList();
     }
 
     private static List<String> reasonPlaceholder(String current) {
-        // Only suggest a placeholder (token-based), not real text completions
         if (current == null || current.isBlank()) return List.of(REASON_PLACEHOLDER);
         String p = current.toLowerCase(Locale.ROOT);
         return REASON_PLACEHOLDER.toLowerCase(Locale.ROOT).startsWith(p)
                 ? List.of(REASON_PLACEHOLDER)
-                : List.of(); // user already typing the reason
+                : List.of();
     }
 }
